2009-07-21	Roxana Leontie <roxana.leontie@gmail.com>

	* libmisc/Makefile.am, libmisc/mw-fb/mw_fb.h: mw_fb.h eliminated the
	ufb_* calls and replaced some of the ioctl structures and numbers
	with the linux framebuffer equivalents
	* libmisc/mw-fb/mw_fb.c: Removed.

2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/include/rtems/posix/cancel.h, posix/src/cancel.c,
	posix/src/canceleval.c, posix/src/setcancelstate.c,
	posix/src/setcanceltype.c: Fix a minor bug in the previous
	modification which resulted in psxcancel failing.

2009-07-21	Santosh G Vattam <vattam.santosh@gmail.com>

	* posix/Makefile.am, posix/include/rtems/posix/cancel.h,
	posix/src/cancel.c, posix/src/setcancelstate.c,
	posix/src/setcanceltype.c: Add
	_POSIX_Thread_Evaluate_cancellation_and_enable_dispatch method to
	avoid duplication of code and ease coverage analysis.
	* posix/src/canceleval.c: New file.

2009-07-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/corebarrierwait.c: Reverse order of tests to increase test
	coverage.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/ratemongetstatus.c: Fix spacing.

2009-07-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexattrgettype.c: Restructure a bit to make code coverage
	analysis easier.

2009-07-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/watchdogadjusttochain.c: Correct bug in recent rework.
	Coverage not impacted.

2009-07-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* score/src/isrthreaddispatch.c: New file.
	* score/include/rtems/score/isr.h: Added prototype.
	* score/Makefile.am: Update.

2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac, score/src/threadqenqueuepriority.c: Add
	RTEMS_DO_NOT_UNROLL_THREADQ_ENQUEUE_PRIORITY to give user ability to
	disable the loop in _Thread_queue_Enqueue_priority from being
	unrolled. This reduces code size and makes coverage analysis easier.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>
